[#4871] Fix style for overflow

--- a/web/src/main/webapp/v2/src/app/core/components/real-time/new/new-real-time-container.component.css
+++ b/web/src/main/webapp/v2/src/app/core/components/real-time/new/new-real-time-container.component.css
@@ -56,7 +56,9 @@
 .l-agent-chart {
     /* 297px : total chart width + margin-right */
     width: calc(100% - 297px);
-    height: 100%;
+    /* height: 100%; */
+    max-height: 100%;
+    overflow-y: auto;
 }
 .l-chart-group-wrap .l-chart-group-list {
     /* display: flex;
